# Harmonizer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  comeGet.mid  newTaps.mid
sketch_steper/: seriel_test.ino  sketch_steper.ino  stepNotes.ino
src/: CMakeLists.txt  FunkyMusic.cpp  HarmonicaMapping.cpp  HarmonicaMapping.h  HarmonicaPlayer.cpp  HarmonicaPlayer.h  MidiHandler.cpp  MidiHandler.h  SerialCommunication.cpp  SerialCommunication.h  serielTest  serielTest.cpp
test/: CMakeLists.txt
test/unit/: HarmonicaMappingTest.cpp  MidiHandlerTest.cpp
tests/: CMakeLists.txt
tests/unit/: HarmonicaMappingTest.cpp  HarmonicaPlayerTest.cpp  MidiHandlerTest.cpp  SerialCommunicationTest.cpp
